[tool.poetry]
name = "pika-pydantic"
version = "0.1.0"
description = "An opinionated Python implementation of the Producer-Consumer Pattern using RabbitMQ on top of the Python pika and pydantic libraries."
authors = ["Matt Gosden <mdgosden@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ttamg/pika-pydantic"
repository = "https://github.com/ttamg/pika-pydantic"
keywords = ["pika", "pydantic", "rabbitmq"]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Communications",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pika = "^1.2.1"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
pylint = "^2.14.2"
black = "^22.3.0"
pytest = "^7.1.2"
pytest-randomly = "^3.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
